fix scanner canvas overflow

--- a/src/components/Scanner/Scanner.module.scss
+++ b/src/components/Scanner/Scanner.module.scss
@@ -4,6 +4,8 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
+
+  overflow: hidden;
 }
 
 .scanOverlay {
